# voxvision

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  FindGC.cmake  HowTo.md  LICENSE  Manual.md  README  README.md  RELEASE_NOTES  RELEASE_NOTES.md  TODO  Tutorial.md  annotated.html  camera_8h.html  camera_8h_source.html  cd_8h.html  cd_8h_source.html  classes.html  datareader_8h.html  datareader_8h_source.html  dir_39dbe73a720a7acdbe643609f0b982c2.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_502968ada57121e58cf44eec30645506.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_76c3e0a55dabe66f635de5968fa1d358.html  dir_e68e8157741866f444e17edd764ebbae.html  engine_8h.html  engine_8h_source.html  files.html  fps-control_8h.html  fps-control_8h_source.html  functions.html  functions_vars.html  geom_8h.html  geom_8h_source.html  globals.html  (+44 more)
.github/workflows/: docs.yml  test.yml
Modules/: FindCUnit.cmake  FindDtrace.cmake  FindGCD.cmake  FindIniParser.cmake  FindSDL2.cmake  FindVN3D.cmake
benchmarks/: CMakeLists.txt  b-dense-insertion-deletion.c  b-random-insertion-deletion.c  b-static-tree-creation.c  gettime.c  gettime.h
benchmarks/voxrnd/: CMakeLists.txt  look_at.c  mtree-population.c  mtree-search.c  rotate_camera.c  screen2world-translations.c  set-rotation-angles.c
benchmarks/voxtrees/: CMakeLists.txt  ball-intersection.c  dense-insertion-deletion.c  hit-box.c  metric.c  mtree-population.c  mtree-search.c  random-insertion-deletion.c  static-tree-creation.c
doc/: CMakeLists.txt  Doxyfile.in  Manual.md
dtrace/: voxrnd.d  voxtrees-cons.d  voxtrees-ng-cons.d  voxtrees-ng-search.d  voxtrees-search.d  voxtrees.d
examples/: CMakeLists.txt  README  example1.lua  example2.lua  example3.lua  example4.lua  example5.lua  scene1.cfg  scene2.cfg
freebsd-port/: Makefile  distinfo  pkg-descr  pkg-plist
lib/: CMakeLists.txt  geom.c  geom.h  list.c  list.h  params.h  search.c  search.h  tree.c  tree.h  voxvision.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+8 more)
simple-renderer/: CMakeLists.txt  data.h  main.c  renderer.c  renderer.h
src/: CMakeLists.txt  gcd-stubs.c  params_var.h.in  voxengine.h  voxrnd.h  voxtrees-ng.h  voxtrees.h  voxvision.h  voxvision.h.in
src/demo/: CMakeLists.txt  config.c  config.h  error.c  error.h  fps-control.c  fps-control.h  main.c  reader.c  reader.h
src/demo2/: CMakeLists.txt  main.c
src/simple-renderer/: CMakeLists.txt  main.c
src/vect-ops/: CMakeLists.txt  camera.c  camera.h  local-loop.c  local-loop.h  renderer-ctx.c  renderer-ctx.h  vect-ops-sse.c  vect-ops.c  vect-ops.h  voxrnd.h
src/voxengine/: CMakeLists.txt  datafinder.c  engine.c  engine.h  genenvironment.py  loadenvironment.lua.in  modules.h  modules.h.in  voxengine.ld.in
src/voxengine/modules/: CMakeLists.txt  scancodes.c  vn3d.c  voxrnd.c  voxsdl.c  voxtrees.c  voxutils.lua
src/voxengine/tools/: genscancodes.py
src/voxengine/wrappers/: CMakeLists.txt  scancodes.c  voxengine.c  voxrnd.c  voxsdl.c  voxtrees.c
src/voxrnd/: CMakeLists.txt  camera.c  camera.h  cd.c  cd.h  copy-helper.c  copy-helper.h  copy_helper.c  distorted-camera.c  distorted-camera.h  doom-camera.c  fps-control.c  fps-control.h  lights.c  lights.h  local-loop.c  local-loop.h  methods.h  modules.c  modules.h  mtree.c  mtree.h  object.c  object.h  probes.h  renderer-ctx.c  renderer-ctx.h  renderer.c  renderer.h  rndstat.c  rndstat.h  screenshot.c  screenshot.h  simple-camera.c  simple-camera.h  vect-ops-sse.c  vect-ops.c  vect-ops.h  voxrnd-dtrace.d  voxrnd.h  (+1 more)
src/voxtrees/: CMakeLists.txt  datareader.c  datareader.h  geom-sse.c  geom.c  geom.h  list.h  mtree.c  mtree.h  params.h  probes.h  search.c  search.h  statistics.c  statistics.h  tree.c  tree.h  treestat.c  treestat.h  voxtrees-dtrace.d  voxtrees.ld.in
src/voxtrees-ng/: CMakeLists.txt  datareader.c  datareader.h  geom-sse.c  geom.c  geom.h  map.c  map.h  probes.h  search.c  search.h  tree.c  tree.h  types.h  voxtrees-ng-dtrace.d  voxtrees-ng.ld.in
tests/: CMakeLists.txt  new-tests.c  tests.c
voxtrees/: CMakeLists.txt  geom.c  params.h  params_var.h.in  search.c  search.h  tree.c  voxtrees.h
